# audient-evo-py

./: .gitignore  CLAUDE.md  DESIGN.md  FINDINGS.md  LICENSE  PLAN.md  README.md  audient.py  driver_swap.ps1  evo4_alsa.py  evo4_kmod.py  evo4_usb.py  evoctl.py  evotui.py  get_volume_req_res.json  probe_mu60.py  probe_set.py  probe_volume.py  pyproject.toml  test_evo4.py  test_evo4_kmod.py  usbipd_switch.ps1
dev/: AUDIO_PLAN.md  DESIGN.md  EVO8-TESTING.md  FINDINGS.md  MY_EVO4_SETUP.md  evo8-implementation.md  evo8-protocol-discrepancies.md  probe.py  probe_mixer.py  probe_mixer_findings.txt  probe_mixer_targeted.py  usbview.txt  windows_impl_plan.md
dev/evo_config_windows/: evo_mixer_maxed_config_max_except_input2_dm_half.txt  evo_settings_all_low.txt
dev/linux-audio/: 51-evo4.conf  evo4-setup.sh  evo4-stereo.conf  evo4_wireplumber_setup.sh  linux_audio.md
dev/usbpcap/: evo_app_start.json  loopback_mixer_input1_8db_to_minus_inf_first10.json  loopback_mixer_input1_left_to_right_first5.json  (+5 more)
evo/: __init__.py  config.py  controller.py  devices.py  diag.py  kmod.py
evo4/: __init__.py  config.py  controller.py  kmod.py
kmod/: .evo4_raw.ko.cmd  .evo4_raw.mod.cmd  .evo4_raw.mod.o.cmd  .evo4_raw.o.cmd  .modules.order.cmd  99-evo4.rules  99-evo8.rules  ARCHITECTURE.md  Makefile  dkms.conf  evo4-load-config.service  evo4_raw.c  evo4_raw.ko  evo4_raw.mod  evo4_raw.mod.c  evo8-load-config.service  evo_raw.c  install.sh  modules.order  uninstall.sh
screenshots/: capture.sh
tests/: conftest.py  test_controller.py  test_devices.py  test_kmod.py  test_mixer_audio.py  test_mixer_mic.py
tui/: __main__.py  app.py
usbpcap/: channel1_gain_100-0.json  channel_1_mute.json  channel_1_unmute.json  get_volume_req_res.pcapng  set_io_mixer_0-100.json  set_mute_on_off.json
wireplumber/: README.md  evo4-setup-install.sh  install.sh  uninstall.sh
(+24 files in other folders)
