[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "audient-evo"
version = "0.2.0"
description = "Linux controller for Audient EVO USB audio interfaces"
license = "Unlicense"
requires-python = ">=3.10"

[project.scripts]
evoctl = "evoctl:main"
evotui = "tui.app:main"

[tool.setuptools]
py-modules = ["evoctl"]
packages = ["evo", "tui"]

[tool.ruff]
line-length = 100

[tool.basedpyright]
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnusedCallResult = "none"

